--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   icons_plus: ^5.0.0
   google_fonts: ^6.2.1
+  flutter_otp_text_field: ^1.4.0+2
 
 dev_dependencies:
   flutter_test:
