--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   icons_plus: ^5.0.0
   google_fonts: ^6.2.1
   flutter_otp_text_field: ^1.4.0+2
+  email_validator: ^3.0.0
 
 dev_dependencies:
   flutter_test:
